<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlHardcoded,TextFields">

    <data>

        <variable
            name="profile"
            type="org.team10424102.whisky.models.Profile"/>

        <variable
            name="handlers"
            type="org.team10424102.whisky.controllers.MyInfoFragment.Handlers"/>

        <import type="org.team10424102.whisky.App"/>
    </data>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/my_info_header"/>

            <org.team10424102.whisky.ui.MyInfoItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{handlers.editSignature}"
                app:caption="@string/my_info_signature"
                app:content="@{profile.signature}"
                app:myIcon="@drawable/ic_pen"
                app:onCommitListener="@{handlers.commitSignature}"
                app:editable="true"/>

            <include layout="@layout/horizontal_divider"/>

            <org.team10424102.whisky.ui.MyInfoItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{handlers.editHometown}"
                app:caption="@string/my_info_hometown"
                app:content="@{profile.hometown}"
                app:myIcon="@drawable/ic_home"
                app:onCommitListener="@{handlers.commitHometown}"
                app:editable="true"/>

            <include layout="@layout/horizontal_divider"/>

            <org.team10424102.whisky.ui.MyInfoItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{handlers.editHighschool}"
                app:caption="@string/my_info_highschool"
                app:content="@{profile.highschool}"
                app:myIcon="@drawable/ic_building"
                app:onCommitListener="@{handlers.commitHighschool}"
                app:editable="true"/>


            <!-- group 2 -->
            <org.team10424102.whisky.ui.MyInfoItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{handlers.editNickname}"
                app:caption="@string/my_info_nickname"
                app:content="@{profile.nickname}"
                app:onCommitListener="@{handlers.commitNickname}"
                app:editable="true"/>

            <include layout="@layout/horizontal_divider"/>

            <org.team10424102.whisky.ui.MyInfoItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{handlers.editUsername}"
                app:caption="@string/my_info_username"
                app:content="@{profile.username}"
                app:onCommitListener="@{handlers.commitUsername}"
                app:editable="true"/>

            <include layout="@layout/horizontal_divider"/>

            <org.team10424102.whisky.ui.MyInfoItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{handlers.editGender}"
                app:caption="@string/my_info_gender"
                app:content="@{App.getContext().getString(profile.gender.getStringResId())}"
                app:options="@array/gender"
                app:onCommitListener="@{handlers.commitGender}"/>

            <include layout="@layout/horizontal_divider"/>

            <org.team10424102.whisky.ui.MyInfoItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{handlers.editBirthday}"
                app:caption="@string/my_info_age"
                app:content="@{profile.age}"/>

            <include layout="@layout/horizontal_divider"/>

            <org.team10424102.whisky.ui.MyInfoItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{handlers.editBirthday}"
                app:caption="@string/my_info_constellation"
                app:content="@{profile.constellation}"/>


            <!-- group 3-->
            <org.team10424102.whisky.ui.MyInfoItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{handlers.editCollege}"
                app:caption="@string/my_info_college"
                app:content="@{profile.college}"/>

            <include layout="@layout/horizontal_divider"/>

            <org.team10424102.whisky.ui.MyInfoItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{handlers.editCollege}"
                app:caption="@string/my_info_academy"
                app:content="@{profile.academy}"/>

            <include layout="@layout/horizontal_divider"/>

            <org.team10424102.whisky.ui.MyInfoItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{handlers.editCollege}"
                app:caption="@string/my_info_grade"
                app:content="@{profile.grade}"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>