<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vcode_hint"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="50dp"
        android:paddingBottom="10dp">
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:id="@+id/vcode_1"/>
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:id="@+id/vcode_2"/>
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:id="@+id/vcode_3"/>
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:id="@+id/vcode_4"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/countdown"
        android:gravity="center"
        android:padding="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vcode_agree"
        android:gravity="center"
        android:paddingTop="50dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vcode_eula"
        android:gravity="center"
        android:textColor="#00f"
        android:paddingBottom="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vcode_register"
        android:id="@+id/register"/>

</LinearLayout>